# benzene-vanilla-cmake

./: .gitignore
src/: CMakeLists.txt
src/my_work/bots/: CMakeLists.txt
src/my_work/bots/random/: RandomEngine.cpp  RandomEngine.hpp  main.cpp
src/my_work/tournament/: game.py  game_player.py  main.py  program.py  tournament.py
